# TaskManagerAPI

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: utils.py
app/db/: database.py
app/models/: models.py  schemas.py
app/routes/: auth_routes.py  task_routes.py  tasks.py
migrations/: env.py
migrations/versions/: fcc36a92d74b_initial_migration.py
tests/: test_database.py  test_tasks.py
